[package]
name = "campus_network_login"
version = "0.1.0"
authors = ["Fontlos <fontlos@fontlos.com>"]
edition = "2021"
readme = "Readme.md"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
hmac = "0.12.1"
md-5 = "0.10.6"
reqwest = "0.12.5"
sha1 = "0.10.6"

[dev-dependencies]
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros"] }